--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Casa.html">Casa</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Casa.html">Juan-K y Heily</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Acerca-de.html">Acerca de</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contacto.html">Contacto</a>
 </li></ul>
@@ -63,10 +63,10 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-align-left u-border-20 u-border-no-bottom u-border-no-right u-border-no-top u-border-palette-2-base u-container-style u-group u-opacity u-opacity-30 u-shape-rectangle u-white u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1500">
           <div class="u-container-layout u-valign-middle u-container-layout-1">
-            <h2 class="u-custom-font u-font-montserrat u-text u-text-1"> The 10 Principles of Good Parenting</h2>
-            <p class="u-text u-text-default u-text-2"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident. </p>
-            <a href="https://nicepage.online" class="u-active-white u-border-active-white u-border-hover-white u-border-none u-btn u-button-style u-hover-white u-palette-2-base u-text-active-palette-2-base u-text-body-alt-color u-text-hover-black u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-delay="500">learn more</a>
-            <p class="u-text u-text-default u-text-3">Image from <a href="https://www.freepik.com/" class="u-border-1 u-border-active-palette-2-base u-border-black u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-link u-button-style u-none u-radius-0 u-text-body-color u-top-left-radius-0 u-top-right-radius-0 u-btn-2" target="_blank">Freepik</a>
+            <h2 class="u-custom-font u-font-montserrat u-text u-text-1"> Nuestros Cariñitos</h2>
+            <p class="u-text u-text-default u-text-2"> Se que cada dia nos amamos cada vez mas y mas. sabes que te quiero mi osita preciosa. </p>
+            <a href="https://nicepage.online" class="u-active-white u-border-active-white u-border-hover-white u-border-none u-btn u-button-style u-hover-white u-palette-2-base u-text-active-palette-2-base u-text-body-alt-color u-text-hover-black u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-delay="500">Leer mas</a>
+            <p class="u-text u-text-default u-text-3">Image from <a href="https://www.facebook.com/heily.romeroalbengrin" class="u-border-1 u-border-active-palette-2-base u-border-black u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-link u-button-style u-none u-radius-0 u-text-body-color u-top-left-radius-0 u-top-right-radius-0 u-btn-2" target="_blank">Facebook Osita</a>
             </p>
           </div>
         </div>
